@@ -30,7 +30,7 @@
 //  PARAM_TRIANGLE_LIGHT_HAS_VERTEX_COLOR
 //  PARAM_HAS_VOLUMEs (and SCENE_DEFAULT_VOLUME_INDEX)
 //  PARAM_PGIC_ENABLED (and PARAM_PGIC_INDIRECT_ENABLED and PARAM_PGIC_CAUSTIC_ENABLED)
-//  PARAM_HYBRID_BACKFORWARD_ENABLE
+//  PARAM_HYBRID_BACKFORWARD
 
 // To enable single material support
 //  PARAM_ENABLE_MAT_MATTE
