@@ -44,8 +44,8 @@ scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.emission.theta = 90
 scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.emission.id = 0
 scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.emission = "Implicit-ConstFloatTexture3-b07762dc-51a9-45b9-a95d-bc92c25044e9"
 scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.visibility.indirect.diffuse.enable = 1
-scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.visibility.indirect.glossy.enable = 1
-scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.visibility.indirect.specular.enable = 1
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.visibility.indirect.glossy.enable = 0
+scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.visibility.indirect.specular.enable = 0
 scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.shadowcatcher.enable = 0
 scene.materials.Lamp_Area_140402982430728_AREA_LIGHT_MAT.shadowcatcher.onlyinfinitelights = 0
 scene.materials.Surface_Material__001_140403213510152.type = "matte"
