@@ -15,6 +15,10 @@ opencl.gpu.workgroup.size = 64
 screen.refresh.interval = 100
 path.maxdepth = 8
 path.russianroulette.depth = 5
+##
+#path.hybridbackforward.enable = 1
+#path.hybridbackforward.partition = 0.0
+##
 # TILEPATH settings
 #tilepath.sampling.aa.size = 3
 path.pathdepth.diffuse = 8
