@@ -1,6 +1,9 @@
 film.width = 640
 film.height = 480
 ##
+#path.hybridbackforward.enable = 1
+#path.hybridbackforward.partition = 0.0
+##
 #path.clamping.variance.maxvalue = 1
 ##
 #path.photongi.sampler.type = RANDOM
